infra/ingress-common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: msa-project-gateway
  namespace: msa-project
spec:
  ingressClassName: nginx
  rules:
    - host: 127.0.0.1.nip.io
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: msa-project-be
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: msa-project-fe
                port:
                  number: 80
